<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="(støtter 'no', 'nb', 'en' -> Britisk Engelsk)"
            android:layout_width="match_parent"
            android:layout_height="21dp" android:id="@+id/textView"
            android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center" android:id="@+id/linearLayout">
        <Button
                android:text="@string/new_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="108dp"
                tools:layout_editor_absoluteX="142dp" android:id="@+id/newGame" android:onClick="newGameButtonOnClick"/>
        <Button
                android:text="@string/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="207dp"
                tools:layout_editor_absoluteX="147dp" android:id="@+id/help" android:onClick="helpButtonOnClick"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="bottom|center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp" android:layout_marginEnd="24dp">
        <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <Button
                android:text="@string/lang"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/english" android:layout_weight="1"
                android:onClick="changeLang"/>
        <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="1"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>