<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity">

    <TextView
            android:text="@string/success"
            android:layout_width="176dp"
            android:layout_height="51dp" android:id="@+id/statusSuccess"
            android:textAlignment="center" android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:background="#ffffff" android:visibility="invisible"/>
    <TextView
            android:text="@string/failure"
            android:layout_width="176dp"
            android:layout_height="51dp" android:id="@+id/statusFailure"
            android:textAlignment="center" android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:background="#ffffff" android:visibility="invisible"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/correct"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:text="@string/nrCorrect"/>
    <TextView
            android:text="@string/nrWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/wrong"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/correct"/>
    <TextView
            android:text="@string/wordsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/left"
            app:layout_constraintEnd_toStartOf="@+id/nrLeft" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nrLeft"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/linearLayout3">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingBottom="30dp"
        >

            <ImageView
                    android:src="@drawable/step10"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/imageProgress"
                    android:layout_weight="1"
            />
            <TextView
                    android:letterSpacing="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/wordProgress"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                    android:textAlignment="center" android:textStyle="bold" android:textSize="30sp"
                    android:textColor="@android:color/background_dark"/>
        </LinearLayout>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:paddingBottom="30dp"
        >

            <TableRow

                    android:gravity="center_horizontal"
                    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">

                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="Q"
                        android:layout_height="match_parent" android:id="@+id/q" android:layout_width="wrap_content"
                />
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="W"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/w"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="E"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/e"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="R"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/r"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="T"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/t"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="Y"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/y"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="U"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/u"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="I"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/i"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="O"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/o"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="P"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/p"/>
            </TableRow>
            <TableRow

                    android:gravity="center_horizontal"
                    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">

                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="A"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/a"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="S"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/s"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="D"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/d"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="F"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/f"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="G"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/g"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="H"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/h"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="j"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/J"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="K"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/k"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="L"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/l"/>
            </TableRow>
            <TableRow
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="Z"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/z"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="X"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/x"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="C"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/c"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="V"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/v"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="B"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/b"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="N"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/n"/>
                <Button
                        android:onClick="buttonOnClick"
                        android:hapticFeedbackEnabled="true"
                        android:minHeight="0dp"
                        android:minWidth="35dp"
                        android:text="M"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/m"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nrCorrect"
            app:layout_constraintStart_toEndOf="@+id/correct"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:text="0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nrWrong"
            app:layout_constraintStart_toEndOf="@+id/wrong"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/correct" android:text="0"/>
</android.support.constraint.ConstraintLayout>